replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/20_class_no_extends.su
// Expected error: missing `extends` — required in MVP.
// The MVP class form requires an explicit parent rather than
// implicitly extending some root.

class Foo { }
